# sqpro

./: Makefile  Makefile.am  Makefile.in  Makefile.orig  README  README.md  WinQuake.plg  aclocal.m4  asm_i386.h  bah  bah2  common.c  config.status  configure  configure.ac  gl_model.c  gl_model.h  gl_rmisc.c  gl_vidlinuxglx.c  host.c  host.c.bak  host_cmd.c  host_cmd.c.bak  iplog.c  model.c  model.h  net_dgrm.c  net_dgrm.c.bak  net_main.c  net_udp.c  output.0  pr_cmds.c  quakedef.h  requests  security.c  security.h  server.h  sv_main.c  sv_main.c.bak  sv_phys.c  (+5 more)
.deps/: glquake_glx-cd_linux.Po  glquake_glx-chase.Po  glquake_glx-cl_demo.Po  glquake_glx-cl_input.Po  glquake_glx-cl_main.Po  glquake_glx-cl_parse.Po  glquake_glx-cl_tent.Po  glquake_glx-cmd.Po  glquake_glx-common.Po  glquake_glx-console.Po  glquake_glx-crc.Po  glquake_glx-cvar.Po  glquake_glx-gl_draw.Po  glquake_glx-gl_mesh.Po  glquake_glx-gl_model.Po  glquake_glx-gl_refrag.Po  glquake_glx-gl_rlight.Po  glquake_glx-gl_rmain.Po  glquake_glx-gl_rmisc.Po  glquake_glx-gl_rsurf.Po  glquake_glx-gl_screen.Po  glquake_glx-gl_test.Po  glquake_glx-gl_vidlinuxglx.Po  glquake_glx-gl_warp.Po  glquake_glx-host.Po  glquake_glx-host_cmd.Po  glquake_glx-iplog.Po  glquake_glx-keys.Po  glquake_glx-location.Po  glquake_glx-mathlib.Po  glquake_glx-matrix.Po  glquake_glx-menu.Po  glquake_glx-net_bsd.Po  glquake_glx-net_dgrm.Po  glquake_glx-net_loop.Po  glquake_glx-net_main.Po  glquake_glx-net_udp.Po  glquake_glx-net_vcr.Po  glquake_glx-pr_cmds.Po  glquake_glx-pr_edict.Po  (+165 more)
