bin_PROGRAMS = glquake_glx quake_x11 unixded
#bin_PROGRAMS = quake_x11

glquake_glx_SOURCES =  \
  cl_demo.c            \
  cl_input.c           \
  cl_main.c            \
  cl_parse.c           \
  cl_tent.c            \
  chase.c              \
	cmd.c                \
	common.c             \
	console.c            \
	crc.c                \
	cvar.c               \
	gl_draw.c            \
	gl_mesh.c            \
	gl_model.c           \
	gl_refrag.c          \
	gl_rlight.c          \
	gl_rmain.c           \
	gl_rmisc.c           \
	gl_rsurf.c           \
	gl_screen.c          \
	gl_test.c            \
	gl_warp.c            \
	gl_vidlinuxglx.c     \
	host.c               \
	host_cmd.c           \
	iplog.c              \
	keys.c               \
	location.c           \
	matrix.c             \
	menu.c               \
	mathlib.c            \
	net_dgrm.c           \
	net_main.c           \
	net_loop.c           \
	net_vcr.c            \
	net_udp.c            \
	net_bsd.c            \
	pr_cmds.c            \
	pr_edict.c           \
	pr_exec.c            \
	r_part.c             \
	sbar.c               \
	security.c           \
	sv_main.c            \
	sv_phys.c            \
	sv_move.c            \
	sv_user.c            \
	zone.c               \
	view.c               \
	wad.c                \
	world.c              \
	cd_linux.c           \
	sys_linux.c          \
	snd_dma.c            \
	snd_mem.c            \
	snd_mix.c            \
	snd_linux.c          \
	math.s               \
	worlda.s             \
	snd_mixa.s           \
	sys_dosa.s

quake_x11_SOURCES =    \
	cl_demo.c            \
	cl_input.c           \
	cl_main.c            \
	cl_parse.c           \
	cl_tent.c            \
	chase.c              \
	cmd.c                \
	common.c             \
	console.c            \
	crc.c                \
	cvar.c               \
	draw.c               \
	d_edge.c             \
	d_fill.c             \
	d_init.c             \
	d_modech.c           \
	d_part.c             \
	d_polyse.c           \
	d_scan.c             \
	d_sky.c              \
	d_sprite.c           \
	d_surf.c             \
	d_vars.c             \
	d_zpoint.c           \
	host.c               \
	host_cmd.c           \
	iplog.c              \
	keys.c               \
	location.c           \
	matrix.c             \
	menu.c               \
	mathlib.c            \
	model.c              \
	net_dgrm.c           \
	net_loop.c           \
	net_main.c           \
	net_vcr.c            \
	net_udp.c            \
	net_bsd.c            \
	nonintel.c           \
	pr_cmds.c            \
	pr_edict.c           \
	pr_exec.c            \
	r_aclip.c            \
	r_alias.c            \
	r_bsp.c              \
	r_light.c            \
	r_draw.c             \
	r_efrag.c            \
	r_edge.c             \
	r_misc.c             \
	r_main.c             \
	r_sky.c              \
	r_sprite.c           \
	r_surf.c             \
	r_part.c             \
	r_vars.c             \
	screen.c             \
	sbar.c               \
	security.c           \
	sv_main.c            \
	sv_phys.c            \
	sv_move.c            \
	sv_user.c            \
	zone.c	             \
	view.c	             \
	wad.c                \
	world.c              \
	cd_linux.c           \
	sys_linux.c          \
	vid_x.c              \
	snd_dma.c            \
	snd_mem.c            \
	snd_mix.c            \
	snd_linux.c          \
	d_draw.s             \
	d_draw16.s           \
	d_parta.s            \
	d_polysa.s           \
	d_scana.s            \
	d_spr8.s             \
	d_varsa.s            \
	math.s               \
	r_aliasa.s           \
	r_drawa.s            \
	r_edgea.s            \
	r_varsa.s            \
	surf16.s             \
	surf8.s              \
	worlda.s             \
	r_aclipa.s           \
	snd_mixa.s           \
	sys_dosa.s

unixded_SOURCES =      \
  cl_demo.c            \
	cl_input.c           \
  cl_main.c            \
	cl_parse.c           \
	cl_tent.c            \
	chase.c              \
  cmd.c                \
  common.c             \
	console.c            \
	crc.c                \
	cvar.c               \
	draw.c               \
	d_edge.c             \
	d_fill.c             \
	d_init.c             \
	d_modech.c           \
	d_part.c             \
	d_polyse.c           \
	d_scan.c             \
	d_sky.c              \
	d_sprite.c           \
	d_surf.c             \
	d_vars.c             \
	d_zpoint.c           \
	host.c               \
	host_cmd.c           \
	iplog.c              \
	keys.c               \
	location.c           \
	matrix.c             \
	mathlib.c            \
	menu.c               \
	model.c              \
	net_bsd.c            \
	net_dgrm.c           \
	net_loop.c           \
	net_main.c           \
	net_udp.c            \
	net_vcr.c            \
	nonintel.c           \
	pr_cmds.c            \
	pr_edict.c           \
	pr_exec.c            \
	r_aclip.c            \
	r_alias.c            \
	r_bsp.c              \
	r_light.c            \
	r_draw.c             \
	r_efrag.c            \
	r_edge.c             \
	r_misc.c             \
	r_main.c             \
	r_sky.c              \
	r_sprite.c           \
	r_surf.c             \
	r_part.c             \
	r_vars.c             \
	sbar.c               \
	screen.c             \
	security.c           \
	sv_main.c            \
	sv_phys.c            \
	sv_move.c            \
	sv_user.c            \
  sys_unixd.c          \
	view.c               \
	wad.c                \
	world.c              \
	cd_null.c            \
	vid_null.c           \
	snd_null.c           \
	in_null.c            \
  zone.c

DEFS =
glquake_glx_CFLAGS = -DPQLINUX -DGLQUAKE -Dstricmp=strcasecmp -D_stricmp=strcasecmp
glquake_glx_CCASFLAGS = -DELF -x assembler-with-cpp
glquake_glx_LDADD = -L/usr/X11/lib -L/usr/local/lib -lGL -lX11 -lXext -ldl -lXxf86dga -lXxf86vm -lm

quake_x11_CFLAGS = -DX11
quake_x11_CCASFLAGS = -DELF -x assembler-with-cpp
quake_x11_LDADD = -L/usr/X11R6/lib -lX11 -lXext -lXxf86dga -lm

unixded_CFLAGS = -DPQLINUX -Did386=0 -Dstricmp=strcasecmp -D_stricmp=strcasecmp -DDEBUG=1
unixded_CCASFLAGS = -DELF -x assembler-with-cpp

unixded_LDADD = -lm -ldl
